--- a/b1w2l1.html
+++ b/b1w2l1.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <h1>Lab 1 - basis</h1>
+  <form>
+  	Value 1 : <input type="text" name="Value 1">
+  </form>
   <script src="b1w2l1.js"></script>
  </body>
 </html>
