--- a/b1w2l2.html
+++ b/b1w2l2.html
@@ -9,6 +9,10 @@
   <script src="b1w2l3.js"></script>
   <form>
   	Value 1: <input type="text" id="value1">
+  	Operator:
+  	<select id="operator">
+  		
+  	</select>
   	<button type="button" onclick="calc()">Calculate</button>
   </form>
  </body>
