--- a/b1w2lPizza.html
+++ b/b1w2lPizza.html
@@ -2,10 +2,10 @@
 <html lang="nl">
 <head>
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-   <title>lab 1 - basis</title>
+   <title>Pizza calculator</title>
 </head>
 <body>
-  <h1>Lab 1 - basis</h1>
-  <script src="b1w2l1.js"></script>
+  <h1>Pizza calculator</h1>
+  <script src="b1w2lPizza.js"></script>
  </body>
 </html>
