--- a/b1w2lPizza.html
+++ b/b1w2lPizza.html
@@ -4,8 +4,15 @@
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
    <title>Pizza calculator</title>
 </head>
-<body>
+<body style="background-color: 	#c0c0c0">
   <h1>Pizza calculator</h1>
   <script src="b1w2lPizza.js"></script>
+  <form>
+  	Pizza small: <input type="text" id="small">
+  	Pizza medium: <input type="text" id="medium">
+  	Pizza large: <input type="text" id="large">
+  	<br>
+  	<button type="button" onclick="Pizza()">Afrekenen</button>
+  </form>
  </body>
 </html>
