--- a/b1w2lPizza.html
+++ b/b1w2lPizza.html
@@ -7,12 +7,18 @@
 <body style="background-color: 	#c0c0c0">
   <h1>Pizza calculator</h1>
   <script src="b1w2lPizza.js"></script>
+  <link rel="stylesheet" type="text/css" href="Pizzacalculator.CSS">
+  <!--
   <form>
-  	Pizza small: <input type="text" id="small">
-  	Pizza medium: <input type="text" id="medium">
-  	Pizza large: <input type="text" id="large">
+  	Pizza small €5 :<input type="text" id="small">
+  	<br>
+  	Pizza medium €8 :<input type="text" id="medium">
+  	<br>
+  	Pizza large €12 :<input type="text" id="large">
+  	<br>
   	<br>
   	<button type="button" onclick="Pizza()">Afrekenen</button>
   </form>
+  //-->
  </body>
 </html>
