--- a/b1w2lPizza.html
+++ b/b1w2lPizza.html
@@ -4,21 +4,10 @@
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
    <title>Pizza calculator</title>
 </head>
-<body style="background-color: 	#c0c0c0">
+<body style="background-color: 	#ffffff">
   <h1>Pizza calculator</h1>
   <script src="b1w2lPizza.js"></script>
   <link rel="stylesheet" type="text/css" href="Pizzacalculator.CSS">
-  <!--
-  <form>
-  	Pizza small €5 :<input type="text" id="small">
-  	<br>
-  	Pizza medium €8 :<input type="text" id="medium">
-  	<br>
-  	Pizza large €12 :<input type="text" id="large">
-  	<br>
-  	<br>
-  	<button type="button" onclick="Pizza()">Afrekenen</button>
-  </form>
-  -->
+  
  </body>
 </html>
